# instruct-backtranslation

./: .env.example  .gitignore  README.md  pyproject.toml
src/instruct_bt/: config.py  extract.py  generate.py  pipeline.py  postprocess.py  prompts.py  select.py  utils.py
